full blog alignment and error fix in blog schedule

--- a/frontend/src/Components/Admin/New_Post/styles.css
+++ b/frontend/src/Components/Admin/New_Post/styles.css
@@ -20,6 +20,9 @@
 .react-datepicker-wrapper {
   width: 100% !important;
 }
+.custom-html{
+  color: black;
+}
 .custom-html h2 {
   font-size: 30px;
   font-weight: 400 !important;
